Fixing page breaks on report sales by date

--- a/XF/Content/Site.css
+++ b/XF/Content/Site.css
@@ -102,3 +102,4 @@ footer {
 .btn {
     min-width:100px;
 }
+.page-break { display: block; page-break-before: always; }
